[package]
name = "arceos-memtest-aligntest"
version = "0.1.0"
edition = "2021"
authors = ["Yibin Zhang <zhangyb20@mails.tsinghua.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libax = { path = "../../../ulib/libax", features = ["alloc", "paging"] }
axalloc = { path = "../../../modules/axalloc" }
